<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualBookFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PLAY"
        android:id="@+id/button"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        />
    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:id="@+id/videoView"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="Cara Mengoperasikan Aplikasi"
        android:textColor="@color/text"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/cara1"
        android:textSize="13dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/cara2"
        android:textSize="13dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/cara3"
        android:textSize="13dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/cara4"
        android:textSize="13dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>