<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/latar2">


            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:layout_margin="40dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="122dp"
                        android:padding="10dp"
                        android:src="@drawable/bmkg"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="15dp"
            android:text="Tentang Aplikasi"
            android:layout_gravity="center"
            android:textSize="20dp"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:textSize="13dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:text="@string/about2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:layout_gravity="center"
            android:textSize="13dp"/>

    </LinearLayout>

</ScrollView>
</FrameLayout>
