<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_tugas">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="250dp"
                android:background="@drawable/background_langit"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_margin="40dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="160dp"
                            android:layout_height="122dp"
                            android:padding="10dp"
                            android:src="@drawable/bmkg" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="Tugas dan Fungsi Stasiun Klimatologi Mlati BMKG Yogyakarta"
                android:textColor="@color/text"

                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Tugas  : "
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tugas"
                android:textColor="#000000"
                android:textSize="13dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Fungsi  : "
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/fungsi1"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/fungsi2"
                android:textColor="#000000"
                android:textSize="13dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/fungsi3"
                android:textColor="#000000"
                android:textSize="13dp"
                />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>